--- a/css/zscroll.css
+++ b/css/zscroll.css
@@ -12,12 +12,12 @@
   margin-right: 25px;
   overflow: hidden;
 }
-.z-scroll .z-scroll-content.zscroll{
-  transition: transform 0.3s;
-  -moz-transition: -moz-transform 0.3s;  /* Firefox 4 */
-  -webkit-transition: -webkit-transform 0.3s; /* Safari 和 Chrome */
-  -o-transition: -o-transform 0.3s;  /* Opera */
-}
+// .z-scroll .z-scroll-content.zscroll{
+//   transition: transform 0.3s;
+//   -moz-transition: -moz-transform 0.3s;   Firefox 4 
+//   -webkit-transition: -webkit-transform 0.3s; /* Safari 和 Chrome */
+//   -o-transition: -o-transform 0.3s;  /* Opera */
+// }
 .z-scroll .z-scroll-shank{
   float: right;
   width: 20px;
